app/global.css
@import 'tailwindcss';

@source '../cypress/**/*.{js,ts,jsx,tsx}';

@plugin 'daisyui' {
	themes: app --default;
}

@plugin 'daisyui/theme' {
	name: 'app';
	default: true;
	color-scheme: light;
	--color-primary: #017bff;
	--color-secondary: #2cc582;
	--color-base-100: #eff9ff;
}

@theme {
	--font-family-outfit: var(--font-outfit), ui-sans-serif, system-ui, sans-serif;
	--color-gray-light: #f6f6f6;
	--color-gray-dark: #585858;
}

html,
body {
	height: 100%;
	margin: 0;
	display: flex;
	flex-direction: column;
}

body {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

#root {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

header,
footer {
	flex-shrink: 0;
}

main {
	flex-grow: 1;
}

select,
select option {
	font-family:
		Inter,
		-apple-system,
		BlinkMacSystemFont,
		Segoe UI,
		Roboto,
		Oxygen,
		Ubuntu,
		Cantarell,
		Fira Sans,
		Droid Sans,
		Helvetica Neue,
		sans-serif;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
	-webkit-box-shadow: 0 0 0 30px #f0f0f0 inset !important;
}

